lentele ir sarasas

--- a/Naujienos/naujienos.html
+++ b/Naujienos/naujienos.html
@@ -10,6 +10,7 @@
   <body>
     <h1 id="top">Naujienos</h1>
 
+    <!-- is border attr depreciated? -->
     <table border="2">
       <tr>
         <th>Pirmas stulpelis nuorodų</th>
@@ -22,6 +23,9 @@
       <tr>
         <td><a href="#">į niekur</a></td>
         <td><a href="#trys">į paveiksliuką</a></td>
+      </tr>
+      <tr>
+        <td colspan="2"><a href="../lenteles.html">į "gražią" lentelę</a></td>
       </tr>
     </table>
 
