--- a/lenteles.html
+++ b/lenteles.html
@@ -26,7 +26,7 @@
       </tr>
       <tr>
         <td>2.</td>
-        <td class="žalia"></td>
+        <td class="raudona"></td>
         <td>27858592</td>
         <td>Rūkas</td>
         <td><img src="./pics/green.jpg" alt="ežeras" /></td>
@@ -38,32 +38,48 @@
         <td>Takas</td>
         <td><img src="./pics/brown.jpg" alt="kelias" /></td>
         <td>
-          <ol>
-            <u>Sąrašiuks</u>
-
-            <li>a</li>
-            <li>b</li>
-            <ul>
-              <li>z</li>
-
+          <ul>
+            <u>Tinklapių kūrimas</u>
+            <li>Frontend</li>
+            <ol>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li><img class="tiny" src="./pics/js.jpeg" alt="JS" /></li>
               <ul>
-                <li>w</li>
-                <li>q</li>
+                <li>jQuery</li>
+                <li>AngularJS</li>
+                <li>ReactJS</li>
+                <li>...</li>
               </ul>
-
-              <li>x</li>
-              <li>s</li>
+            </ol>
+            <li>Backend</li>
+            <ul>
+              <li><img class="tiny" src="./pics/php.jpeg" alt="php" /></li>
+              <li>C#</li>
+              <li>JAVA</li>
+              <li>NodeJs</li>
+              <li>...</li>
             </ul>
-            <li>c</li>
-            <li>d</li>
-            <li>e</li>
-          </ol>
+            <li>DB</li>
+            <ul>
+              <li>MySQL</li>
+              <li>MariaDB</li>
+              <li>
+                <img
+                  class="tiny"
+                  src="./pics/postgresql.jpeg"
+                  alt="PostgreSQL"
+                />
+              </li>
+              <li>...</li>
+            </ul>
+          </ul>
         </td>
       </tr>
     </table>
     <div style="text-align: center">
       <caption>
-        lentelė be ryšio
+        lentelė su užduotimis
       </caption>
     </div>
     <a href="./Naujienos/naujienos.html">grįžti</a>
