1as bandymas sudaryti aiškų paskaitų konspektą

--- a/Naujienos/naujienos.html
+++ b/Naujienos/naujienos.html
@@ -8,7 +8,13 @@
   </head>
 
   <body>
-    <h1 id="top">Naujienos</h1>
+    <p>
+      <small>
+        Užduotis tame, kad reikia sukūrti nuorodas į kitus puslapius įvairiuose
+        segtuvose</small
+      >
+    </p>
+    <h1 id="top">Naujienos (fake news)</h1>
 
     <!-- is border attr depreciated? -->
     <table border="2">
