--- a/index.html
+++ b/index.html
@@ -10,5 +10,45 @@
     <h1>Turinys</h1>
     <a href="./contacts.html">į kontaktus</a>
     <a href="./Naujienos/naujienos.html">į naujienas</a>
+    <br />
+    <br />
+    <table border="5">
+      <tr>
+        <th>Praktiniai darbai</th>
+        <th>Medžiagos</th>
+        <th>Cheat Sheet (Špargalkė)</th>
+        <th>Daugiau sprendimų</th>
+      </tr>
+      <tr>
+        <td><a href="./Naujienos/naujienos.html">Darbas su nuorodom</a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><a href="./lenteles.html">Darbas su lentelėm</a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>
+          <a href="./lenteles.html"
+            >Kelių lygių sąrašas (toje pačioje lentelėje)</a
+          >
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><a href="#">Darbas su formomis (dabar daroma)</a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+
+    <ul></ul>
   </body>
 </html>
