+text under pic as remainder

--- a/positions/textOverPic.html
+++ b/positions/textOverPic.html
@@ -28,5 +28,114 @@
         </p>
       </div>
     </div>
+    <section class="remainder">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis fuga
+      aut, doloremque dolore dolorem iure ad voluptas expedita, laudantium
+      exercitationem perspiciatis illum odit reiciendis corrupti repellendus
+      itaque tempora numquam voluptatibus id dignissimos dicta modi. Sequi
+      deserunt temporibus error commodi mollitia, ea voluptatem, debitis
+      architecto ipsum, aperiam provident? Debitis, recusandae. Rerum laudantium
+      eos eligendi veritatis possimus sint minima sequi, inventore voluptate
+      animi veniam odio consequatur quisquam cumque quos officiis sapiente
+      aliquid repellendus amet esse molestiae excepturi voluptatibus. Qui et,
+      magni deleniti eos amet distinctio ipsum, nihil maiores repellendus
+      commodi quos saepe. Aliquid officiis expedita repellendus eum, provident,
+      exercitationem maiores animi dolorum fuga velit eligendi nostrum adipisci
+      perferendis laborum tempora perspiciatis iste ratione laboriosam aperiam.
+      Ea illo quasi culpa aliquam eius ad iure laudantium sit enim temporibus
+      quod eveniet, molestias, est quia ex, voluptatum consequatur expedita sunt
+      nihil blanditiis! Quos accusantium asperiores velit cupiditate, amet
+      cumque aut soluta ipsum itaque aperiam labore eos assumenda illo numquam
+      hic iure? Similique natus ut harum minus laboriosam. Perferendis beatae
+      commodi veniam obcaecati est, cumque similique, laboriosam consequatur
+      debitis sapiente deleniti illo fugiat porro dolorem a quia iure nostrum.
+      Doloribus explicabo neque repellendus asperiores porro, necessitatibus
+      maiores delectus blanditiis sequi quasi amet ab iste distinctio, minus
+      saepe commodi inventore ea quidem sint aliquid atque vel perspiciatis
+      accusamus? Cupiditate maxime architecto ab officiis odio eveniet repellat,
+      illum pariatur deserunt sapiente doloremque aliquam! Quasi officia nobis,
+      totam soluta est, dolore nostrum itaque reiciendis eos incidunt modi hic
+      nemo. Tempora qui, consequatur sapiente dolor atque aperiam possimus rerum
+      placeat numquam esse illo praesentium, delectus natus quisquam laborum
+      autem cum non mollitia debitis, ad eius. Blanditiis ea quisquam
+      praesentium laudantium incidunt error iure non sunt in deleniti doloremque
+      odit nesciunt velit nam illum ab maiores rerum, nisi cumque tempore.
+      Commodi quam veniam dolor optio. Delectus beatae labore aut porro minima
+      in molestias! Ducimus sint velit aut autem doloremque nihil quia, debitis
+      quasi voluptate vitae, earum odit architecto odio et ratione iure porro
+      soluta deserunt. Reiciendis magni aperiam quo! Officia nam consequuntur
+      labore cum praesentium aliquam. Rerum eum veritatis, sint neque aspernatur
+      adipisci magni qui officiis perspiciatis molestias ea fugit quod alias
+      harum magnam exercitationem nostrum iusto et quibusdam voluptas?
+      Praesentium explicabo, quibusdam similique atque magnam libero quam modi
+      pariatur ratione tempora veniam nostrum distinctio consequuntur
+      repudiandae debitis laboriosam doloribus inventore ab. Dolorem sit quod
+      quaerat animi necessitatibus quo inventore ipsa officia nulla obcaecati
+      dolorum voluptatem, minima expedita eveniet nemo atque iure minus ad
+      praesentium dolore repellat cupiditate? Atque cupiditate autem rem, amet
+      fugit itaque. Obcaecati magnam, recusandae optio minima quia facilis
+      laboriosam cum! Nam consectetur obcaecati minima ut! Sit explicabo
+      voluptate aliquid dolor quod et, maiores rem obcaecati voluptas,
+      aspernatur illum! Nemo minima provident facilis facere illo corporis non,
+      itaque rem vitae blanditiis consequuntur voluptates temporibus molestias
+      praesentium velit maxime, alias recusandae cum veniam, sapiente iste!
+      Nesciunt eaque doloribus distinctio neque, sit, totam voluptate aliquid
+      aspernatur sed assumenda, ab magni nostrum alias. Nulla repellendus ullam
+      libero maiores labore, assumenda esse, dicta vel porro numquam hic. Ut
+      placeat nisi, debitis reprehenderit officiis sed rem aspernatur eligendi!
+      Modi dolorem odio, cumque itaque sunt, aspernatur facere voluptate totam
+      sint nobis accusamus reprehenderit facilis quasi laudantium quas quaerat
+      provident vero iste. Voluptates, amet! Blanditiis excepturi expedita
+      quidem optio repellendus hic, in vel laboriosam iure molestias neque nisi
+      voluptas dolorem commodi similique temporibus tempore libero minima earum!
+      Atque doloremque officiis minima. Veniam sint recusandae odio cumque cum
+      necessitatibus, velit perferendis eius cupiditate doloremque error neque
+      sequi consequuntur adipisci? Dignissimos necessitatibus modi nihil? Odit
+      expedita dignissimos deserunt a vero quam adipisci eum magnam nam odio
+      placeat velit sequi autem minus commodi voluptatem, maxime ab est libero
+      iste molestiae harum nobis quaerat? Molestiae eveniet numquam quis
+      praesentium non nam accusamus. Sunt molestias facere cupiditate tempore
+      doloremque, nostrum quasi ut dicta? Voluptatibus earum id placeat
+      laudantium fugit beatae ab ea nulla inventore labore, porro, corporis
+      cumque reprehenderit, odit quibusdam laborum cum officiis accusantium
+      nostrum deleniti! Accusantium exercitationem officia cumque, impedit a
+      dolorem magni cum recusandae nihil rerum fugiat nulla molestias? Quibusdam
+      pariatur amet officia saepe explicabo tempore consequuntur animi inventore
+      ea dicta quam, quos voluptate nihil asperiores id quod illo veritatis iste
+      nemo nobis blanditiis distinctio cupiditate nulla? Sit ex repudiandae
+      reiciendis soluta labore autem iusto illum voluptatem ipsa tempora
+      voluptates culpa optio maxime eius consectetur voluptate quidem ut saepe
+      amet non, quos corrupti sint deleniti? Veniam perferendis eaque hic,
+      asperiores sit quam ullam aliquid voluptatum, eius quidem molestiae
+      perspiciatis nisi placeat debitis, esse voluptates atque neque nesciunt
+      cupiditate alias? Deleniti dignissimos nam alias, ea, praesentium et, amet
+      ullam mollitia minus numquam eum distinctio porro voluptatem hic dolor rem
+      unde molestiae ducimus id exercitationem dolores harum. Delectus error
+      porro vero accusamus minus consequatur culpa numquam distinctio, sed
+      debitis! Deleniti mollitia corrupti nihil quos facilis ex illo culpa
+      molestias iure fugit sequi, at inventore aperiam illum autem totam! Non,
+      veritatis itaque. Ullam mollitia totam porro quas adipisci, nobis
+      inventore omnis ut sit rem corrupti. At cumque distinctio laborum soluta,
+      quo consectetur dicta consequatur aliquam blanditiis amet. Omnis amet
+      voluptatum atque sit vitae quis consequuntur, doloremque in cupiditate
+      laboriosam impedit ex, mollitia repellat provident quam laudantium quia
+      tenetur maiores fugit quae. Sit itaque dolor non esse, ullam error
+      distinctio accusantium iste velit nihil quam incidunt amet dignissimos
+      consequatur quibusdam recusandae, vitae temporibus sint blanditiis maxime
+      repellat. Soluta doloremque inventore numquam minus laboriosam error cum,
+      architecto totam enim neque vel facere ullam earum, consequatur quas
+      delectus. Saepe dolorem aspernatur sint culpa reiciendis eum tempore quod
+      veniam possimus fugiat eveniet voluptatibus, cum excepturi maxime? Est
+      cupiditate optio, dicta officia, aspernatur, amet consequatur provident
+      doloremque et molestias cumque quasi modi maiores itaque delectus ullam?
+      Fuga dolor dolores saepe possimus deserunt, ut eaque blanditiis corrupti
+      adipisci itaque maiores aliquam exercitationem voluptates delectus sint
+      porro vero maxime ducimus minus autem excepturi impedit quos libero! Unde
+      rem quisquam facere. Saepe praesentium, iusto natus sequi adipisci ullam
+      optio assumenda earum facilis soluta quis veritatis, commodi culpa
+      similique, ab necessitatibus esse aspernatur! Facere dolore quasi maiores
+      recusandae officiis aliquam natus enim omnis nesciunt blanditiis. Illo
+      deleniti quos eius!
+    </section>
   </body>
 </html>
