edit ketvirta: +Skaiciai ir centruoti navigacija

--- a/figma/ketvirta.html
+++ b/figma/ketvirta.html
@@ -53,10 +53,10 @@
       </button>
     </div>
 
-    <div class="scr" id="white"></div>
-    <div class="scr" id="green"></div>
-    <div class="scr" id="blue"></div>
-    <div class="scr" id="red"></div>
-    <div class="scr" id="grey"></div>
+    <div class="scr" id="white"><span>1</span></div>
+    <div class="scr" id="green"><span>2</span></div>
+    <div class="scr" id="blue"><span>3</span></div>
+    <div class="scr" id="red"><span>4</span></div>
+    <div class="scr" id="grey"><span>5</span></div>
   </body>
 </html>
