sunkiausias su paveiksliukais

--- a/figma/dreamTripPage.html
+++ b/figma/dreamTripPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dream Trip Page</title>
     <link
       rel="stylesheet"
@@ -22,7 +22,7 @@
   <body>
     <div class="card">
       <div class="text-box">
-        <h1 class="hello">Hello</h1>
+        <h1 class="hello">Hello!</h1>
         <h2 class="title">This is my Dream Trip page.</h2>
         <p class="text">
           Lorem ipsum dolor sit amet consectetur. Dolor commodo dui sem egestas
@@ -37,7 +37,7 @@
       </div>
       <div class="img-box">
         <img class="pic-rectangle" src="./pics/Rectangle 3.png" alt="" />
-        <img class="pic-planet" src="./pics/planet earth(1).png" alt="" />
+        <img class="pic-planet" src="./pics/planet.png" alt="" />
         <img
           class="pic-man"
           src="./pics/young man holding paper map(1).png"
