--- a/figma/dreamTripPage.html
+++ b/figma/dreamTripPage.html
@@ -36,6 +36,7 @@
         </p>
       </div>
       <div class="img-box">
+        <div class="oba">Činkšt</div>
         <img class="pic-rectangle" src="./pics/Rectangle 3.png" alt="" />
         <img class="pic-planet" src="./pics/planet.png" alt="" />
         <img
