--- a/projects/links/contacts.html
+++ b/projects/links/contacts.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contacts</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Contacts</title>
   </head>
   <body>
     <h1>Kontaktai</h1>
-    <a href="./index.html">į turinį</a>
-    <a href="./Naujienos/naujienos.html">į naujienas</a>
+    <a href="../../index.html">į turinį</a>
+    <a href="../news/naujienos.html">į naujienas (ten nuorodų lentelė)</a>
   </body>
 </html>
