--- a/projects/tables/lenteles.html
+++ b/projects/tables/lenteles.html
@@ -21,22 +21,22 @@
         <td class="mėlyna"></td>
         <td>4734839</td>
         <td>Ežerėlis</td>
-        <td><img src="./pics/blue.jpg" alt="miškas" /></td>
-        <td rowspan="2"><img src="./pics/white.jpg" alt="rūkas" /></td>
+        <td><img src="../pics/blue.jpg" alt="miškas" /></td>
+        <td rowspan="2"><img src="../pics/white.jpg" alt="rūkas" /></td>
       </tr>
       <tr>
         <td>2.</td>
         <td class="raudona"></td>
         <td>27858592</td>
         <td>Rūkas</td>
-        <td><img src="./pics/green.jpg" alt="ežeras" /></td>
+        <td><img src="../pics/green.jpg" alt="ežeras" /></td>
       </tr>
       <tr>
         <td>3.</td>
         <td class="ruda"></td>
         <td>92748959</td>
         <td>Takas</td>
-        <td><img src="./pics/brown.jpg" alt="kelias" /></td>
+        <td><img src="../pics/brown.jpg" alt="kelias" /></td>
         <td>
           <ul>
             <u>Tinklapių kūrimas</u>
@@ -44,7 +44,7 @@
             <ol>
               <li>HTML</li>
               <li>CSS</li>
-              <li><img class="tiny" src="./pics/js.jpeg" alt="JS" /></li>
+              <li><img class="tiny" src="../pics/js.jpeg" alt="JS" /></li>
               <ul>
                 <li>jQuery</li>
                 <li>AngularJS</li>
@@ -54,7 +54,7 @@
             </ol>
             <li>Backend</li>
             <ul>
-              <li><img class="tiny" src="./pics/php.jpeg" alt="php" /></li>
+              <li><img class="tiny" src="../pics/php.jpeg" alt="php" /></li>
               <li>C#</li>
               <li>JAVA</li>
               <li>NodeJs</li>
@@ -67,7 +67,7 @@
               <li>
                 <img
                   class="tiny"
-                  src="./pics/postgresql.jpeg"
+                  src="../pics/postgresql.jpeg"
                   alt="PostgreSQL"
                 />
               </li>
@@ -82,6 +82,6 @@
         lentelė su užduotimis
       </caption>
     </div>
-    <a href="./Naujienos/naujienos.html">grįžti</a>
+    <a href="../news/naujienos.html">grįžti</a>
   </body>
 </html>
