--- a/index.html
+++ b/index.html
@@ -3,52 +3,275 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
+    <title>Mano Konspektas</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Turinys</h1>
-    <a href="./contacts.html">į kontaktus</a>
-    <a href="./Naujienos/naujienos.html">į naujienas</a>
-    <br />
-    <br />
-    <table border="5">
-      <tr>
-        <th>Praktiniai darbai</th>
-        <th>Medžiagos</th>
-        <th>Cheat Sheet (Špargalkė)</th>
-        <th>Daugiau sprendimų</th>
-      </tr>
-      <tr>
-        <td><a href="./Naujienos/naujienos.html">Darbas su nuorodom</a></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td><a href="./lenteles.html">Darbas su lentelėm</a></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>
-          <a href="./lenteles.html"
+    <main>
+      <h1>Konspektas</h1>
+      <p>under construction ...</p>
+      <br />
+      <ul>
+        <li><a href="./projects/links/contacts.html">Darbas su nuorodom</a></li>
+        <li>
+          <a href="./projects/tables/lenteles.html">Darbas su lentelėm</a>
+        </li>
+        <li>
+          <a href="./projects/tables/lenteles.html"
             >Kelių lygių sąrašas (toje pačioje lentelėje)</a
           >
-        </td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td><a href="#">Darbas su formomis (dabar daroma)</a></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+        </li>
+        <li><a href="./projects/forms/formos.html">Darbas su formomis</a></li>
+      </ul>
+      <h2>Iš figma į html/css</h2>
+      <div class="figma-tasks">
+        <a href="./projects/figma/dreamTripPage.html"
+          ><img class="screenshots" src="./images/figma/dream.png" alt=""
+        /></a>
 
-    <ul></ul>
+        <a href="./projects/figma/index.html"
+          ><img class="screenshots" src="./images/figma/3cards.png" alt=""
+        /></a>
+
+        <a href="./projects/figma/antra.html"
+          ><img
+            class="screenshots"
+            src="./images/figma/figma-creator.png"
+            alt=""
+        /></a>
+
+        <a href="./projects/figma/ketvirta.html"
+          ><img
+            class="screenshots"
+            src="./images/figma/figma-5screens.png"
+            alt=""
+        /></a>
+
+        <a href="./projects/figma/penkta.html"
+          ><img
+            class="screenshots"
+            src="./images/figma/figma-AboutMe.png"
+            alt=""
+        /></a>
+
+        <a href="./projects/figma/trecia.html"
+          ><img
+            class="screenshots"
+            src="./images/figma/matiuhalnikas.png"
+            alt=""
+        /></a>
+      </div>
+      <br />
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi culpa
+      consectetur optio? Molestiae cumque nam sapiente error vel asperiores
+      reprehenderit eum deleniti deserunt? Soluta quod inventore consectetur,
+      cumque, itaque laboriosam nobis non fuga, perspiciatis culpa id obcaecati?
+      Voluptas aperiam nemo quia hic, nostrum fugiat, tenetur qui placeat
+      veritatis quibusdam in magnam repellat dignissimos expedita vel
+      consectetur quod. Iusto, eaque odio molestias itaque eum pariatur et
+      officiis ab assumenda, debitis voluptatum. Perspiciatis aspernatur, soluta
+      ipsa est facilis veniam quidem? Et, officia, sequi minus obcaecati est
+      voluptates facilis enim corrupti vero beatae inventore dolorum
+      consequuntur voluptatem assumenda. Neque consectetur cupiditate error
+      dolorum enim sapiente voluptatem necessitatibus sit molestiae? Totam iure
+      nostrum abiosam cupiditate aut. Animi nesciunt quo, nobis voluptatum quia
+      dolorem eaque facere excepturi! Tenetur, distinctio! Illo ea, distinctio
+      optio iusto doloremque velit animi nulla sit, iste sapiente repellat
+      quidem tempora a nisi id ad voluptatem dolor culpa assumenda enim eaque
+      odio? Voluptates quo iure dicta, maiores tenetur corporis aspernatur velit
+      laudantium? Beatae enim incidunt dolorem nihil velit maxime. Ipsam
+      accusamus eligendi dolorum ab facilis. Consectetur architecto fugit
+      tempora ad ex reprehenderit ea inventore rerum deleniti optio sapiente
+      voluptatem, corrupti odio cupiditate veritatis aliquam similique. Aliquid
+      quae, minus qui quos optio quidem facere veniam enim, ullam debitis
+      laborum eius similique! Distinctio itaque facere tempore modi at et
+      architecto corrupti fugiat magnam, eius quod. Consectetur nostrum itaque
+      ad explicabo nihil. Harum quos, incidunt ullam iusto alias ipsam quisquam
+      nam magni blanditiis? Veritatis rerum quidem ratione commodi voluptate
+      illum, repellendus, laboriosam quia dolorem sint assumenda sed. Molestiae
+      vero laudantium facilis eaque alias tenetur ipsum voluptatibus dicta
+      quisquam autem illum omnis fugit natus, consequatur ipsam cumque
+      voluptate, distinctio cupiditate est expedita consequuntur aperiam. Cumque
+      animi veniam quae id consequatur, eaque necessitatibus incidunt aliquid
+      porro possimus impedit hic obcaecati dicta delectus quis natus,
+      perspiciatis iusto beatae laboriosam. Voluptas iure, veniam voluptatem
+      repellendus dignissimos aut consectetur laborum blanditiis beatae fugit
+      fugiat sint repudiandae. Tempora, quia beatae. Sapiente excepturi vero,
+      obcaecati, alias assumenda deleniti aspernatur cumque nesciunt tempora
+      consequuntur temporibus, dolorem delectus? Blanditiis quibusdam vel error,
+      asperiores quasi voluptate. Temporibus dolorum architecto ut ex fugit
+      beatae delectus nemo nostrum labore, voluptatem ipsa impedit eum velit
+      perferendis illo. Sed assumenda doloribus expedita voluptates tempore
+      dolorem harum reiciendis eum quibusdam odit, iure inventore? Autem optio
+      aliquid iure est odit, earum delectus deleniti dicta facilis! Similique
+      consectetur deleniti sed tempore eveniet provident corrupti, quos enim
+      velit eum dolorum eaque animi est beatae assumenda, architecto quam
+      laudantium numquam fuga molestias distinctio alias ullam? Dignissimos
+      obcaecati error optio? Laborum quaerat officia non quo animi aliquam
+      explicabo pariatur eaque amet laboriosam quia molestias temporibus unde,
+      nam veritatis corporis autem laudantium maxime totam minima, delectus,
+      inventore et. Voluptatibus, ipsam molestias ipsum magnam nesciunt mollitia
+      minus, rem ratione nulla maxime odit rerum voluptates expedita eum, earum
+      sunt dolore animi quidem unde consequuntur minima dolores? Consectetur
+      mollitia quis porro repellat rerum sint beatae optio, nihil tempora
+      reiciendis fugiat saepe impedit cumque, perspiciatis amet quas perferendis
+      iure modi, aliquid minima. Ea unde quod dignissimos blanditiis temporibus
+      odit recusandae est asperiores? Reprehenderit omnis accusantium officiis
+      eveniet repudiandae est dignissimos? Maiores sint quisquam odit quis
+      cumque provident dicta harum, consequuntur laudantium perspiciatis porro
+      totam consectetur itaque expedita, enim nesciunt rem deserunt magnam
+      libero cum? Ruam fugit. Nesciunt quibusdam praesentium cum accusamus.
+      Obcaecati ea eligendi rerum, odit perferendis consequatur error pariatur
+      consectetur incidunt, veritatis sunt, cumque unde dolore tempore ullam
+      numquam animi optio? Ad autem optio deserunt aut minima, labore eos quidem
+      libero obcaecati. At quibusdam, natus voluptates commodi pariatur delectus
+      repellendus modi fuga laboriosam dolore ad perspiciatis ipsam, officia
+      quisquam facere minima omnis! Incidunt corrupti similique facilis dolore
+      minima autem quae corporis nobis fugit saepe, quasi adipisci esse
+      dignissimos nam magnam veritatis enim doloremque voluptatum! Error
+      voluptas deseecessitatibus deserunt odit, voluptatem dolore tenetur,
+      tempora ea recusandae pariatur dolores nam quasi perspiciatis magnam
+      commodi? Porro ex iure, placeat incidunt commodi optio aut eaque. Illo,
+      officiis explicabo. Quam blanditiis libero adipisci. Quidem illum
+      distinctio magnam fugiat totam quasi deserunt sapiente dicta, aperiam
+      tempora blanditiis laboriosam culpa! Excepturi, optio. Magni mollitia quas
+      dolorem magnam alias hic facere nihil possimus fugiat perferendis nesciunt
+      pariatur ut, ratione unde non assumenda, dignissimos necessitatibus
+      doloribus et aliquam aspernatur quia excepturi? Aut, vel eius, dolores
+      quos magni esse ex consequatur porro tenetur ut nostrum eum, laborum hic
+      non velit animi! Vel repudiandae placeat nisi cum rem veniam quibusdam
+      eligendi debitis? Non enim eos quae consectetur architecto ea id
+      voluptatibus, quo accusantium, quia, soluta deserunt beatae rem doloremque
+      cupiditate vero at! Temporibus adipisci, eaque ullam iste earum neque quo
+      nemo numqu.m optio cupiditate nesciunt. Delectus dolorum similique fuga a
+      mollitia earum neque hic deleniti veniam, ullam rerum, impedit ducimus
+      fugiat odio qeat provident saepe beatae. Nostrum, nihil.
+    </main>
+
+    <div id="contents-box">
+      <h1>Turinys</h1>
+      <ol>
+        <li>HTML</li>
+        <ol>
+          <li>Pradžia</li>
+        </ol>
+        <li>CSS</li>
+      </ol>
+      <br />
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos
+      deserunt fugit ea, incidunt corporis doloribus dicta aliquam excepturi
+      impedit optio debitis reprehenderit autem nobis consequuntur hic. Suscipit
+      in, natus laudantium itaque veniam explicabo nulla dolores, hic veritatis
+      ea soluta vitae modi sint velit cumque porro vel similique obcaecati esse
+      voluptates libero numquam ipsam. Illum ipsum voluptatem voluptas ex
+      placeat, ipsa voluptatibus voluptatum vero asperiores illo sunt. Qui
+      reprehenderit beatae, corporis exercitationem rem ratione! Veniam, sed
+      voluptas rem saepe voluptate fugiat unde blanditiis cupiditate, atque
+      molestias iste quisquam eum nesciunt vero libero minima inventore fuga
+      non, quidem possimus recusandae modi eaque assumenda consequatur. Officia
+      aut obcaecati odit nemo aperiam recusandae harum porro molestias, minima,
+      numquam delectus veritatis voluptatem quidem eveniet iusto dolore. Minus
+      esse accusantium ratione quam quo impedit amet quidem temporibus doloribus
+      ipsa, perspiciatis ullam, praesentium deleniti fugiat beatae molestiae
+      dolores. Nulla ratione saepe provident repellendus, rerum consectetur odio
+      officia beatae nobis natus repudiandae voluptates sunt quae. Autem vero
+      minima ratione quia libero, consectetur eos error in ipsam. Tempore
+      mollitia delectus officiis voluptatem omnis? Doloremque quidem beatae
+      provident! Recusandae, velit. Et nulla cupiditate eos suscipit numquam
+      possimus maiores delectus. Unde, laboriosam officiis tempore rem inventore
+      magnam quidem omnis architecto dolorum voluptatibus quae nihil pariatur
+      voluptate aspernatur explicabo expedita similique ut magni saepe
+      voluptatum dolore aliquam ratione quis fuga? Alias modi earum dolorum
+      natus ducimus, eius perspiciatis vitae assumenda fugit recusandae ad saepe
+      voluptates distinctio autem sequi molestias? Totam est optio iste dolor
+      eius animi adipisci voluptatem, quas voluptatum tenetur! Consequatur id
+      dicta sint nulla. Perferendis animi adipisci aliquam aut dolorum quisquam
+      labore corporis sequi dolorem nihil, accusantium quod minus similique!
+      Asperiores quisquam exercitationem sequi quidem ullam temporibus magni aut
+      necessitatibus ipsum, ad dolores facilis nam saepe autem ea omnis, beatae
+      iure, voluptas nobis consequatur expedita debitis unde vel? Corrupti
+      voluptatum laboriosam maxime fugiat amet aperiam odit quos corporis
+      nesciunt culpa ipsum, aliquid eligendi facilis quisquam minima eveniet
+      voluptas iusto quod dolores et! Tempore incidunt, veritatis in impedit
+      sint magni accusamus ullam? Maxime omnis sunt non debitis dolore eligendi
+      fugiat, nobis sint quasi modi doloremque cupiditate labore facere.
+      Cupiditate iste sint id sequi, sed quod! Laudantium odit neque hic dolorem
+      explicabo beatae magnam facere culpa rem voluptatum. Odio error
+      perspiciatis maiores quos porro voluptate suscipit, iusto illo, rem qui
+      nam quo alias voluptatibus corrupti est ipsam optio distinctio itaque quod
+      voluptates? Quo, ea voluptatibus? Impedit pariatur eius iure dicta ullam,
+      molestias temporibus alias at ab quidem porro illum cumque odio adipisci
+      similique ut sint esse totam exercitationem consectetur veritatis
+      praesentium. Dolore non ipsa amet reprehenderit. A animi consequuntur
+      magnam veniam repellendus voluptatem tenetur eius tempore! Fugiat dicta
+      voluptates voluptatum molestiae exercitationem quam accusantium tempora.
+      Numquam dolor sapiente tempore ab possimus odio doloremque vitae quidem
+      neque, accusamus voluptate. Corporis unde perferendis quae voluptate rem
+      deserunt quia quasi sequi obcaecati excepturi amet eveniet id, nesciunt
+      odio placeat aliquid expedita repudiandae fugit eaque quod necessitatibus
+      a nisi corrupti! Doloremque cum tempore atque impedit magnam facere culpa
+      voluptatem amet ex officiis! Quos incidunt veniam saepe possimus, aliquid
+      magni blanditiis itaque eius nostrum perspiciatis quas esse consequatur
+      est eos hic doloremque delectus tempora enim placeat! Mollitia culpa
+      expedita ipsa, praesentium officia voluptates ex sapiente harum tempora
+      magnam adipisci doloribus at libero eum earum. Modi eveniet nisi ipsam
+      quis. Vel repellendus placeat eos eaque recusandae accusamus. Magnam
+      fugiat officia voluptatem deleniti dolore laboriosam explicabo nam quas
+      libero, vitae officiis veritatis dolores facere? Corporis illum deleniti,
+      explicabo aliquid voluptatum laborum recusandae consequatur modi nihil.
+      Debitis provident vel, dolore ut id ab neque, iusto adipisci rerum
+      cupiditate aperiam necessitatibus sequi, temporibus cumque fuga voluptate
+      inventore optio? Tempore reiciendis animi quia possimus facilis, dolore
+      quam libero quis molestiae, nihil vero ipsa corrupti quas beatae vel
+      necessitatibus, aliquam rem delectus ex minus nam ad praesentium. Sed,
+      corporis voluptatem iure possimus quia earum dolore magni? Odio commodi
+      nihil laborum, ea ut ipsam voluptate tempora nostrum quam error quo animi
+      atque, dolore veritatis nemo ratione fugiat repellat voluptas distinctio.
+      Qui quibusdam tempora debitis est cumque ea minus, repudiandae
+      voluptatibus non adipisci voluptatum culpa veritatis et possimus facere
+      eos quae in asperiores. Animi cupiditate neque maxime sunt obcaecati,
+      dicta ea eveniet esse, non alias quaerat suscipit facilis aut placeat.
+      Expedita voluptatibus ipsam recusandae beatae soluta rerum vero qui,
+      provident commodi minus iusto blanditiis suscipit doloremque quasi
+      temporibus quo corrupti esse, illum sint ratione accusamus architecto
+      sequi! Sit voluptates beatae dolorum veniam, voluptatem suscipit? Harum
+      necessitatibus aperiam tenetur earum possimus eius totam excepturi, iure
+      explicabo obcaecati libero dolores incidunt repellendus nostrum
+      laudantium, quae vero! Voluptatum culpa voluptates modi excepturi nostrum
+      aliquam perspiciatis officiis, blanditiis cumque dolores dolorum, delectus
+      debitis corrupti nihil! Eius, sapiente? Adipisci ex molestiae unde modi
+      tenetur, quo repudiandae suscipit natus voluptatem dicta eaque animi
+      quibusdam recusandae reprehenderit sapiente quisquam! Facilis harum
+      eligendi dignissimos voluptate numquam cum ratione culpa quibusdam nam
+      doloremque vitae eos ea at accusantium explicabo nobis, blanditiis ipsam
+      iste velit. Ad voluptas laboriosam quasi tempora in, nam ipsa quod commodi
+      nesciunt quaerat, recusandae explicabo assumenda repellat et quidem ullam
+      saepe blanditiis ducimus voluptate quis voluptatem quo? Vero vitae odit ex
+      veniam nihil ab, libero reiciendis consequatur mollitia eaque? Aliquid
+      laboriosam corrupti dolorum, voluptatum esse iste labore excepturi, odio
+      quidem quos, tempore atque explicabo tempora voluptate ab quasi a nobis
+      assumenda earum facilis! Fugit perferendis nihil, architecto fuga tempore
+      autem totam qui alias in odio! Distinctio magni sapiente omnis odit maxime
+      praesentium eum voluptatem eaque vero eligendi, saepe voluptates nemo
+      tempore asperiores magnam deleniti eveniet accusantium, perferendis in.
+      Odio ducimus id architecto facilis suscipit explicabo dolorum modi
+      molestias corporis accusamus vel ut fuga asperiores quo omnis accusantium
+      sed minus consectetur nihil sit impedit, sequi voluptatum soluta
+      provident. Beatae ut officiis veritatis, voluptatem impedit, quam esse id
+      nemo sunt, placeat accusamus ab earum deleniti reprehenderit ipsam
+      dignissimos harum facere labore perspiciatis quis sapiente eius voluptas
+      deserunt. Natus doloremque laudantium eos, eum similique sint animi
+      blanditiis voluptatem earum nostrum debitis ipsa quasi minus vero et
+      quidem, quae in accusamus, eaque consectetur saepe. Quidem atque inventore
+      incidunt, vel modi quae. Consectetur assumenda molestiae earum.
+    </div>
   </body>
 </html>
