--- a/projects/figma/dreamTrip/dreamTripPage.html
+++ b/projects/figma/dreamTrip/dreamTripPage.html
@@ -37,11 +37,11 @@
       </div>
       <div class="img-box">
         <div class="oba">Činkšt</div>
-        <img class="pic-rectangle" src="./pics/Rectangle 3.png" alt="" />
-        <img class="pic-planet" src="./pics/planet.png" alt="" />
+        <img class="pic-rectangle" src="../pics/Rectangle 3.png" alt="" />
+        <img class="pic-planet" src="../pics/planet.png" alt="" />
         <img
           class="pic-man"
-          src="./pics/young man holding paper map(1).png"
+          src="../pics/young man holding paper map(1).png"
           alt=""
         />
       </div>
