[global] : +link to positioning [3 cards] : shadow on hover

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
           >
         </li>
         <li><a href="./projects/forms/formos.html">Darbas su formomis</a></li>
+        <li>
+          <a href="./projects/positions/textOverPic.html"
+            >Elementų išdėstymas puslapyje</a
+          >
+        </li>
       </ul>
       <h2>Iš figma į html/css</h2>
       <div class="figma-tasks">
