--- a/projects/figma/3cards/index.html
+++ b/projects/figma/3cards/index.html
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <div class="card cd-shadow-blue">
+    <div class="card cd-shadow-default">
       <div class="pic-2 img">
         <div class="calendar">
           <h1 class="day">3</h1>
