--- a/projects/tables/lenteles.html
+++ b/projects/tables/lenteles.html
@@ -38,7 +38,7 @@
         <td>Takas</td>
         <td><img src="../pics/brown.jpg" alt="kelias" /></td>
         <td>
-          <ul>
+          <ul id="nested-list">
             <u>Tinklapių kūrimas</u>
             <li>Frontend</li>
             <ol>
