--- a/projects/links/contacts.html
+++ b/projects/links/contacts.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Kontaktai</h1>
-    <a href="../../index.html">į turinį</a>
+    <a href="../../index.html#first-tasks">į turinį</a>
     <a href="../news/naujienos.html">į naujienas (ten nuorodų lentelė)</a>
   </body>
 </html>
