--- a/projects/flex/index.html
+++ b/projects/flex/index.html
@@ -15,100 +15,103 @@
   <link rel="stylesheet" href="./base.css" />
   <link rel="stylesheet" href="./myStyles.css" />
   <body>
-    <img class="bg" src="../pics/gelato-bg.png" alt="" />
-    <div class="container">
-      <nav>
-        <ul>
-          <li><a href="#">PRODUCTS</a></li>
-          <li><a href="#">DISCOUNTS</a></li>
-          <li>
-            <a href="#"
-              ><svg
-                class="logo"
-                width="32"
-                height="32"
-                viewBox="0 0 32 32"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g clip-path="url(#clip0_1_62)">
-                  <path
-                    d="M24 16L16 30L8 16"
-                    stroke="white"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M7 11C7 8.61305 7.94821 6.32387 9.63604 4.63604C11.3239 2.94821 13.6131 2 16 2C18.3869 2 20.6761 2.94821 22.364 4.63604C24.0518 6.32387 25 8.61305 25 11V12C25.5304 12 26.0391 12.2107 26.4142 12.5858C26.7893 12.9609 27 13.4696 27 14C27 14.5304 26.7893 15.0391 26.4142 15.4142C26.0391 15.7893 25.5304 16 25 16H7C6.46957 16 5.96086 15.7893 5.58579 15.4142C5.21071 15.0391 5 14.5304 5 14C5 13.4696 5.21071 12.9609 5.58579 12.5858C5.96086 12.2107 6.46957 12 7 12V11Z"
-                    stroke="white"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M18.3575 25.875L12.7137 16"
-                    stroke="white"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M20.7137 21.75L17.4287 16"
-                    stroke="white"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </g>
-                <defs>
-                  <clipPath id="clip0_1_62">
-                    <rect width="32" height="32" fill="white" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </a>
-          </li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">ABOUT US</a></li>
-        </ul>
-      </nav>
-      <div class="shelves">
-        <h1>Products</h1>
-        <span class="slogan">Affordable quality, every time.</span>
-        <div class="card-section">
-          <div class="card">
-            <img class="card-img" src="../pics/vanilla.jpeg" alt="vanila" />
-            <h2 class="card-title">VANILLA ICE CREAM</h2>
-            <div class="dash">-</div>
-            <p class="card-description">
-              Creamy, sweet, and classic, it's a timeless favorite.
-            </p>
-            <a href="#" class="for-more">READ MORE</a>
+    <div class="bg">
+      <div class="overlay">
+        <div class="container">
+          <nav>
+            <ul>
+              <li><a href="#">PRODUCTS</a></li>
+              <li><a href="#">DISCOUNTS</a></li>
+              <li>
+                <a href="#"
+                  ><svg
+                    class="logo"
+                    width="32"
+                    height="32"
+                    viewBox="0 0 32 32"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <g clip-path="url(#clip0_1_62)">
+                      <path
+                        d="M24 16L16 30L8 16"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M7 11C7 8.61305 7.94821 6.32387 9.63604 4.63604C11.3239 2.94821 13.6131 2 16 2C18.3869 2 20.6761 2.94821 22.364 4.63604C24.0518 6.32387 25 8.61305 25 11V12C25.5304 12 26.0391 12.2107 26.4142 12.5858C26.7893 12.9609 27 13.4696 27 14C27 14.5304 26.7893 15.0391 26.4142 15.4142C26.0391 15.7893 25.5304 16 25 16H7C6.46957 16 5.96086 15.7893 5.58579 15.4142C5.21071 15.0391 5 14.5304 5 14C5 13.4696 5.21071 12.9609 5.58579 12.5858C5.96086 12.2107 6.46957 12 7 12V11Z"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M18.3575 25.875L12.7137 16"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M20.7137 21.75L17.4287 16"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_1_62">
+                        <rect width="32" height="32" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </a>
+              </li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">ABOUT US</a></li>
+            </ul>
+          </nav>
+          <div class="shelves">
+            <h1>Products</h1>
+            <span class="slogan">Affordable quality, every time.</span>
+            <div class="card-section">
+              <div class="card">
+                <img class="card-img" src="../pics/vanilla.jpeg" alt="vanila" />
+                <h2 class="card-title">VANILLA ICE CREAM</h2>
+                <div class="dash">-</div>
+                <p class="card-description">
+                  Creamy, sweet, and classic, it's a timeless favorite.
+                </p>
+                <a href="#" class="for-more">READ MORE</a>
+              </div>
+              <div class="card">
+                <img class="card-img" src="../pics/sorbet.jpeg" alt="sorbet" />
+                <h2 class="card-title">FRUIT SORBET</h2>
+                <div class="dash">-</div>
+                <p class="card-description">
+                  Refreshing and tangy, it bursts with natural fruit flavors.
+                </p>
+                <a href="#" class="for-more">READ MORE</a>
+              </div>
+              <div class="card">
+                <img class="card-img" src="../pics/choco.png" alt="choco" />
+                <h2 class="card-title">CHOCOLATE GELATO</h2>
+                <div class="dash">-</div>
+                <p class="card-description">
+                  Rich, indulgent, and oh-so-smooth, a chocoholic's dream.
+                </p>
+                <a href="#" class="for-more">READ MORE</a>
+              </div>
+            </div>
           </div>
-          <div class="card">
-            <img class="card-img" src="../pics/sorbet.jpeg" alt="sorbet" />
-            <h2 class="card-title">FRUIT SORBET</h2>
-            <div class="dash">-</div>
-            <p class="card-description">
-              Refreshing and tangy, it bursts with natural fruit flavors.
-            </p>
-            <a href="#" class="for-more">READ MORE</a>
-          </div>
-          <div class="card">
-            <img class="card-img" src="../pics/choco.png" alt="choco" />
-            <h2 class="card-title">CHOCOLATE GELATO</h2>
-            <div class="dash">-</div>
-            <p class="card-description">
-              Rich, indulgent, and oh-so-smooth, a chocoholic's dream.
-            </p>
-            <a href="#" class="for-more">READ MORE</a>
-          </div>
+          <footer>
+            <span class="copyright">© Ice+cream & CO</span>
+          </footer>
         </div>
       </div>
-      <footer>
-        <span class="copyright">© Ice+cream & CO</span>
-      </footer>
     </div>
   </body>
 </html>
