[global] : + link to flex task "gelato"

--- a/index.html
+++ b/index.html
@@ -442,6 +442,13 @@
             alt=""
         /></a>
       </section>
+      <section>
+        <h2>Naudojant Flex</h2>
+        <p>Dar užduotėlės naudojant flex</p>
+        <a href="./projects/flex/index.html"
+          ><img class="screenshots" src="./images/flex/gelato.png" alt=""
+        /></a>
+      </section>
     </main>
 
     <div id="contents-box">
