[figma-gelato] : wrap cards, px->rem

--- a/projects/flex/index.html
+++ b/projects/flex/index.html
@@ -76,8 +76,8 @@
           </nav>
           <div class="shelves">
             <h1>Products</h1>
-            <span class="slogan">Affordable quality, every time.</span>
-            <div class="card-section">
+            <h2 class="slogan">Affordable quality, every time.</h2>
+            <div class="cards-section">
               <div class="card">
                 <img class="card-img" src="../pics/vanilla.jpeg" alt="vanila" />
                 <h2 class="card-title">VANILLA ICE CREAM</h2>
