[flex-art] : +new task, [global] upd. links

--- a/index.html
+++ b/index.html
@@ -445,10 +445,15 @@
       <section>
         <h2>Naudojant Flex</h2>
         <p>Dar užduotėlės naudojant flex</p>
-        <a href="./projects/flex/index.html"
+        <a href="./projects/flex/gelato/index.html"
           ><img class="screenshots" src="./images/flex/gelato.png" alt=""
         /></a>
+        <a href="./projects/flex/art/index.html"
+          ><img class="screenshots" src="./images/flex/figma-art.png" alt=""
+        /></a>
       </section>
+
+      <!-- wrknow -->
     </main>
 
     <div id="contents-box">
