--- a/projects/flex/gelato/index.html
+++ b/projects/flex/gelato/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gelato</title>
   </head>
-  <link rel="stylesheet" href="../../reset.css" />
+  <link rel="stylesheet" href="../../../reset.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="./base.css" />
+  <link rel="stylesheet" href="../../../base.css" />
   <link rel="stylesheet" href="./myStyles.css" />
   <body>
     <div class="bg">
@@ -79,7 +79,11 @@
             <h2 class="slogan">Affordable quality, every time.</h2>
             <div class="cards-section">
               <div class="card">
-                <img class="card-img" src="../pics/vanilla.jpeg" alt="vanila" />
+                <img
+                  class="card-img"
+                  src="../../pics/vanilla.jpeg"
+                  alt="vanila"
+                />
                 <h2 class="card-title">VANILLA ICE CREAM</h2>
                 <div class="dash">-</div>
                 <p class="card-description">
@@ -88,7 +92,11 @@
                 <a href="#" class="for-more">READ MORE</a>
               </div>
               <div class="card">
-                <img class="card-img" src="../pics/sorbet.jpeg" alt="sorbet" />
+                <img
+                  class="card-img"
+                  src="../../pics/sorbet.jpeg"
+                  alt="sorbet"
+                />
                 <h2 class="card-title">FRUIT SORBET</h2>
                 <div class="dash">-</div>
                 <p class="card-description">
@@ -97,7 +105,7 @@
                 <a href="#" class="for-more">READ MORE</a>
               </div>
               <div class="card">
-                <img class="card-img" src="../pics/choco.png" alt="choco" />
+                <img class="card-img" src="../../pics/choco.png" alt="choco" />
                 <h2 class="card-title">CHOCOLATE GELATO</h2>
                 <div class="dash">-</div>
                 <p class="card-description">
