[global] : +link to flex-foto journey task

--- a/index.html
+++ b/index.html
@@ -452,6 +452,9 @@
         <a href="./projects/flex/art/index.html"
           ><img class="screenshots" src="./images/flex/figma-art.png" alt=""
         /></a>
+        <a href="./projects/flex/foto-journey/index.html"
+          ><img class="screenshots" src="./images/flex/foto-journey.png" alt=""
+        /></a>
       </section>
 
       <!-- wrknow -->
