[global]: link to done tasks in front

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <strike
           >Web development konspektas. Fullstack kursai: HTML, CSS,
           Javascript.</strike
-        ><br /><small>Pamokslavimai apie px ir kitus matavimo vienetus.</small>
+        ><br /><small
+          >Mano pamokslavimai apie px ir kitus matavimo vienetus.</small
+        >
       </h1>
       <div class="epi">
         <cite> Geriausiai išmoksti kai mokai kitus. </cite>
@@ -483,6 +485,9 @@
     <div id="contents-box">
       <button class="hide-btn" onclick="toggleTOCsection()">Paslėpti</button>
       <h1>Turinys</h1>
+      <a id="link-to-tasks" href="#figma-tasks"
+        >linkas į padarytas užduotėles</a
+      >
       <ol id="toc">
         <!-- čia susigeneruos nuorodos į h2, 
           kuriems bus suteikti random id jeigu nėra id
