[festival]: mob. v. continuation

--- a/projects/flex/Festival Site Design/index.html
+++ b/projects/flex/Festival Site Design/index.html
@@ -42,10 +42,78 @@
           </p>
         </div>
         <div class="btns-header-container">
-          <button class="buy-btn">Buy Ticket</button>
-          <button class="view-btn">View Artists</button>
+          <button class="btn">Buy Ticket</button>
+          <button class="btn view-btn">View Artists</button>
         </div>
       </div>
     </header>
+    <div class="slogan">
+      <p>
+        In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
+        gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
+        cursus auctor vel elementum quis. Mi sed in nec tincidunt facilisis
+        dolor mattis congue. Viverra fermentum ipsum.
+      </p>
+    </div>
+    <section class="artists">
+      <h2>ARTISTS</h2>
+      <div class="line"></div>
+      <p class="p-under">
+        In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
+        gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
+        cursus auctor.
+      </p>
+      <div class="artist">
+        <img src="./assets/pics/tomke.jpeg" alt="" />
+        <h3>TOMKE</h3>
+        <p>Elementum hendrerit lectus laoreet gravida</p>
+      </div>
+      <div class="artist">
+        <img src="./assets/pics/upce.jpeg" alt="" />
+        <h3>UPCE</h3>
+        <p>Elementum hendrerit lectus laoreet gravida</p>
+      </div>
+      <div class="artist">
+        <img src="./assets/pics/hendrei.jpeg" alt="" />
+        <h3>HENDREI</h3>
+        <p>Hendrerit lectus laoreet gravida</p>
+      </div>
+      <div class="artist">
+        <img src="./assets/pics/pugr.jpeg" alt="" />
+        <h3>PUGR</h3>
+        <p>Elementum hendrerit lectus laoreet gravida</p>
+      </div>
+    </section>
+    <section class="galery">
+      <h2>Gallery</h2>
+      <div class="line"></div>
+      <p class="p-under">
+        In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
+        gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
+        cursus auctor.
+      </p>
+      <div class="imgs">
+        <img src="./assets/pics/gare.jpeg" alt="" /><img
+          src="./assets/pics/kitchen.jpeg"
+          alt=""
+        /><img src="./assets/pics/couple.jpeg" alt="" /><img
+          src="./assets/pics/house.jpeg"
+          alt=""
+        /><img src="./assets/pics/arch.jpeg" alt="" /><img
+          src="./assets/pics/tool.jpeg"
+          alt=""
+        />
+      </div>
+    </section>
+    <section>
+      <h2>TICKETS</h2>
+      <div class="line"></div>
+      <p class="p-under">
+        In felis, ultricies vitae, morbi. Elementum hendrerit lectus laoreet
+        gravida urna nunc, a, elementum. Donec nisi vel scelerisque dignissim
+        cursus auctor.
+      </p>
+      <h3>ONE DAY TICKET</h3>
+    </section>
   </body>
 </html>
