[global]:tried to edit from codespaces

--- a/index.html
+++ b/index.html
@@ -478,6 +478,12 @@
           ><img class="screenshots" src="./images/flex/foto-journey.png" alt=""
         /></a>
       </section>
+      <section>
+        <h2 id="work-in-progress">Dabar daroma...</h2>
+        <a href="./projects/flex/Festival Site Design/index.html"
+        ><img class="screenshots" src="./projects/flex/Festival Site Design/assets/pics/festival-header-pic.jpeg" alt=""
+      /></a>
+      </section>
 
       <!-- wrknow -->
     </main>
@@ -488,6 +494,10 @@
       <a id="link-to-tasks" href="#figma-tasks"
         >linkas į padarytas užduotėles</a
       >
+      <br>
+      <a id="link-to-tasks" href="#work-in-progress"
+      >dabar daroma</a
+    >
       <ol id="toc">
         <!-- čia susigeneruos nuorodos į h2, 
           kuriems bus suteikti random id jeigu nėra id
